<resources>
    <string name="app_name">Varsity</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="pass">Password</string>
    <string name="signup">Sign Up</string>
    <string name="remember">Remember Me</string>
    <string name="newuser">New User?</string>
    <string name="emailid">Email-ID</string>
    <string name="confpass">Confirm Password</string>
    <string name="dob">Date of Birth</string>
    <string name="phone">Phone Number</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="popular_courses">Popular Courses</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="popular_books">Popular Books</string>
    <string name="recommended_courses">Recommended Courses</string>
    <string name="recommended_categories">Recommended Categories</string>
    <string name="recommended_books">Recomended Books</string>

    <string name="Popular_Course_1">Title 1</string>
    <string name="Popular_course_2">Title 2</string>
    <string name="Popular_course_3">Title 3</string>
    <string name="Popular_course_4">Title 4</string>
    <string name="Popular_course_5">Title 5</string>
    <string name="Popular_course_6">Title 6</string>
    <string name="Popular_course_7">Title 7</string>

    <string name="Category_1">Title 1</string>
    <string name="Category_2">Title 2</string>
    <string name="Category_3">Title 3</string>
    <string name="Category_4">Title 4</string>
    <string name="Category_5">Title 5</string>
    <string name="Category_6">Title 6</string>
    <string name="Category_7">Title 7</string>

    <string name="popular_Book_1">Title 1</string>
    <string name="popular_Book_2">Title 2</string>
    <string name="popular_Book_3">Title 3</string>
    <string name="popular_Book_4">Title 4</string>
    <string name="popular_Book_5">Title 5</string>
    <string name="popular_Book_6">Title 6</string>
    <string name="popular_Book_7">Title 7</string>

    <string name="course_1_topic_1">Topic 1</string>
    <string name="course_1_topic_2">Topic 2</string>
    <string name="course_1_topic_3">Topic 3</string>
    <string name="course_1_topic_4">Topic 4</string>
    <string name="course_1_topic_5">Topic 5</string>
    <string name="course_1_topic_6">Topic 6</string>

    <string name="top1NoLogin">Offered Books</string>
    <string name="top2NoLogin">Offered Courses</string>
    <string name="bottom3NoLogIn">Sign In</string>

    <string name="top1Login">Enrolled Courses</string>
    <string name="top2Login">Offered Courses</string>
    <string name="top3Login">Offered Books</string>
    <string name="top4Login">Clarity Session Time</string>
    <string name="Bottom4Login">Settings</string>
    <string name="Bottom5LogIn">Sign Out</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="lorem_ipsum_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <string name="app_label">Varsity</string>
    <string name="search_hint">Search Courses</string>
</resources>
